--- a/vision-mission/index.html
+++ b/vision-mission/index.html
@@ -796,7 +796,7 @@
 											</li>
 											<li id="menu-item-476"
 												class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-parent-item menu-item-476">
-												<a href="../courses/">Classroom Training</a>
+												<a href="#">Classroom Training</a>
 												<ul class="sub-menu">
 													<li id="menu-item-1841"
 														class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-parent-item menu-item-1841">
@@ -1448,9 +1448,10 @@
 												<ul class="sub-menu">
 													<li id="menu-item-1202"
 														class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1202">
-														<a href="../cad-cam-cae-fresh-engineers-for-placement/">Invitation
+														<a
+															href="../hvac-ibms-cyber_security-fresh-engineers-for-placement/">Invitation
 															to Companies for
-															Placements: CAD CAM CAE Fresh Engineers for Placement</a>
+															Placements: HVAC, IBMS, Cyber Security for Placement</a>
 													</li>
 												</ul>
 											</li>
