--- a/MAGNOVA_CERTIFIED_AUTOCAD_ENGINEER/index.html
+++ b/MAGNOVA_CERTIFIED_AUTOCAD_ENGINEER/index.html
@@ -801,7 +801,7 @@
 											</li>
 											<li id="menu-item-476"
 												class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-parent-item menu-item-476">
-												<a href="../courses/">Classroom Training</a>
+												<a href="#">Classroom Training</a>
 												<ul class="sub-menu">
 													<li id="menu-item-145"
 														class="menu-item menu-item-type-post_type menu-item-object-page menu-item-145">
@@ -911,9 +911,10 @@
 												<ul class="sub-menu">
 													<li id="menu-item-1202"
 														class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1202">
-														<a href="../cad-cam-cae-fresh-engineers-for-placement/">Invitation
+														<a
+															href="../hvac-ibms-cyber_security-fresh-engineers-for-placement/">Invitation
 															to Companies for
-															Placements: CAD CAM CAE Fresh Engineers for Placement</a>
+															Placements: HVAC, IBMS, Cyber Security for Placement</a>
 													</li>
 												</ul>
 											</li>
@@ -987,13 +988,14 @@
 							<div id="content" style="border: 1px solid red; padding: 10px;">
 								<p class="headings alignbottom"><strong>You can also pay the fees online:</strong></p>
 								<p><strong>Account:</strong> Magnova Engineers<br />
-									<strong>Bank and Branch:</strong> Axis Bank Ltd., Kothrud Branch, Pune-411038<br />
-									<strong>Account Number:</strong> 104010200009058<br />
+									<strong>Bank and Branch:</strong> HDFC Bank Ltd. Pawani Plaza, Punjagutta, Hyderabad
+									- 500082<br />
+									<strong>Account Number:</strong> 59217021584398<br />
 									<strong>Account Type:</strong> Current<br />
-									<strong>Branch Code:</strong> 000104<br />
-									<strong>IFSC Code:</strong> UTIB0000104<br />
+									<strong>Branch Code:</strong> 001228<br />
+									<strong>IFSC Code:</strong> HDFC0001228<br />
 									<strong>RTGS Code:</strong> Same as above<br />
-									<strong>MICR Code: </strong>411211004
+									<strong>MICR Code: </strong>500240023
 								</p>
 							</div>
 							<div>
