--- a/POST.html
+++ b/POST.html
@@ -1581,8 +1581,8 @@
 													<li id="menu-item-1202"
 														class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1202">
 														<a
-															href="https://ifsacademy.org/cad-cam-cae-fresh-engineers-for-placement/">Invitation
-															to Companies for Placements: CAD CAM CAE Fresh Engineers for
+															href="https://ifsacademy.org/hvac-ibms-cyber_security-fresh-engineers-for-placement/">Invitation
+															to Companies for Placements: HVAC, IBMS, Cyber Security for
 															Placement</a>
 													</li>
 												</ul>
