--- a/contact/index.html
+++ b/contact/index.html
@@ -733,7 +733,7 @@
 
 					<div class="pay-btn">
 						<a href="https://admission.ifsacademy.org/">Apply Online</a>
-						<a href="../pay-course-fees-online/">Pay Course Fees Online</a>
+						<a href="https://magnovatech.com/payment.php" target="_blanck">Pay Course Fees Online</a>
 					</div>
 				</div>
 
