--- a/why-magnova-engineers-franchise/index.html
+++ b/why-magnova-engineers-franchise/index.html
@@ -747,7 +747,7 @@
 					</div> -->
 					<div class="pay-btn">
 						<a href="https://admission.ifsacademy.org/">Apply Online</a>
-						<a href="../pay-course-fees-online/">Pay Course Fees Online</a>
+						<a href="https://magnovatech.com/payment.php" target="_blanck">Pay Course Fees Online</a>
 					</div>
 				</div>
 
