--- a/contact/index.html
+++ b/contact/index.html
@@ -597,7 +597,6 @@
 				margin: 0px 0px 55px 0px !important;
 			}
 
-			.enq_form,
 			.enq_call {
 				display: none !important;
 			}
@@ -612,7 +611,7 @@
 			color: #fff !important;
 			font-size: 14px;
 			overflow: hidden;
-			width: 10%;
+			width: 20vh;
 			position: fixed;
 			top: 48%;
 			border-radius: 10px;
