--- a/hvac-ibms-cyber_security-fresh-engineers-for-placement/index.html
+++ b/hvac-ibms-cyber_security-fresh-engineers-for-placement/index.html
@@ -594,7 +594,6 @@
 				margin: 0px 0px 55px 0px !important;
 			}
 
-			.enq_form,
 			.enq_call {
 				display: none !important;
 			}
@@ -609,7 +608,7 @@
 			color: #fff !important;
 			font-size: 14px;
 			overflow: hidden;
-			width: 10%;
+			width: 20vh;
 			position: fixed;
 			top: 48%;
 			border-radius: 10px;
