--- a/vision-mission/index.html
+++ b/vision-mission/index.html
@@ -1564,7 +1564,7 @@
 
 
 
-	<div class="enq_form"><a class="sg-popup-id-4743" href="#">ENQUIRE NOW</a></div>
+	<div class="enq_form"><a class="sg-popup-id-4743" href="../enquiryform.html">ENQUIRE NOW</a></div>
 
 
 
