--- a/MAGNOVA_CERTIFIED_HVAC_ENGINEER/index.html
+++ b/MAGNOVA_CERTIFIED_HVAC_ENGINEER/index.html
@@ -750,7 +750,7 @@
 						</ul>
 					</div> -->
 					<div class="pay-btn">
-						<a href="https://admission.ifsacademy.org/">Apply Online</a>
+						<a href="#">Apply Online</a>
 						<a href="https://magnovatech.com/payment.php" target="_blanck">Pay Course Fees Online</a>
 					</div>
 				</div>
