--- a/contact/index.html
+++ b/contact/index.html
@@ -731,7 +731,7 @@
 				<div class="">
 
 					<div class="pay-btn">
-						<a href="https://admission.ifsacademy.org/">Apply Online</a>
+						<a href="#">Apply Online</a>
 						<a href="https://magnovatech.com/payment.php" target="_blanck">Pay Course Fees Online</a>
 					</div>
 				</div>
