--- a/magnova-engineers-franchise-opportunity/index.html
+++ b/magnova-engineers-franchise-opportunity/index.html
@@ -745,7 +745,7 @@
 						</ul>
 					</div> -->
 					<div class="pay-btn">
-						<a href="https://admission.ifsacademy.org/">Apply Online</a>
+						<a href="#">Apply Online</a>
 						<a href="https://magnovatech.com/payment.php" target="_blanck">Pay Course Fees Online</a>
 					</div>
 				</div>
