--- a/wp-content/themes/superb-lite/assets/css/fonts/flexslider-icon-3.html
+++ b/wp-content/themes/superb-lite/assets/css/fonts/flexslider-icon-3.html
@@ -733,7 +733,7 @@
 						</ul>
 					</div>
 					<div class="pay-btn">
-						<a href="https://admission.ifsacademy.org/">Apply Online</a>
+						<a href="#">Apply Online</a>
 						<a href="https://ifsacademy.org/pay-course-fees-online/">Pay Course Fees Online</a>
 					</div>
 				</div>
