--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
           </div> -->
           <div class="pay-btn">
             <a href="#">Apply Online</a>
-            <a href="https://magnovatech.com/payment.php" target="_blanck">Pay Course Fees Online</a>
+            <a href="https://erp.magnovatech.com/payment.php" target="_blanck">Pay Course Fees Online</a>
           </div>
         </div>
 
