--- a/enquiryform.html
+++ b/enquiryform.html
@@ -388,7 +388,7 @@
     Username: "magnovaengineers@gmail.com",
     Password: "fzibvexrvzrlfjvo",
     To: "chandra.p@magnovatech.com",
-    From: senderEmail,
+    From: "enquiry@no_reply",
     Subject: subject,
     Body: body,
   }).then((message) => (successMsg.innerHTML = "Mail Successfully Sent To US"));
