--- a/about-us-magnova-engineers/index.html
+++ b/about-us-magnova-engineers/index.html
@@ -746,7 +746,7 @@
 						</ul>
 					</div> -->
 					<div class="pay-btn">
-						<a href="#">Apply Online</a>
+						<a href="../new_registration.html">Apply Online</a>
 						<a href="https://magnovatech.com/payment.php" target="_blanck">Pay Course Fees Online</a>
 					</div>
 				</div>
