--- a/careers/index.html
+++ b/careers/index.html
@@ -717,7 +717,7 @@
 				<div class="">
 
 					<div class="pay-btn">
-						<a href="#">Apply Online</a>
+						<a href="../new_registration.html">Apply Online</a>
 						<a href="https://magnovatech.com/payment.php" target="_blanck">Pay Course Fees Online</a>
 					</div>
 				</div>
