--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
             </ul>
           </div> -->
           <div class="pay-btn">
-            <a href="#">Apply Online</a>
+            <a href="new_registration.html" target="_blanck">Apply Online</a>
             <a href="https://erp.magnovatech.com/payment.php" target="_blanck">Pay Course Fees Online</a>
           </div>
         </div>
