--- a/student-internship-program/index.html
+++ b/student-internship-program/index.html
@@ -745,7 +745,7 @@
 						</ul>
 					</div> -->
 					<div class="pay-btn">
-						<a href="#">Apply Online</a>
+						<a href="../new_registration.html">Apply Online</a>
 						<a href="https://magnovatech.com/payment.php" target="_blanck">Pay Course Fees Online</a>
 					</div>
 				</div>
