--- a/enquiryform.html
+++ b/enquiryform.html
@@ -271,8 +271,7 @@
             <div class="banner">
                 <h1>Course Enquiry Form</h1>
             </div>
-            <p class="top-info">Thank you for your interest in working with us. Please check below for available job
-                opportunities that meet your criteria and send your application by filling out the Job Application Form.
+            <p class="top-info" style="font-size: 1rem;">Thank you for your interest in  us. Please fill the details below and be assured for 100% Placement Guarantee .
             </p>
             <div class="item">
                 <p>Name<span class="required">*</span></p>
