--- a/why-magnova-engineers/index.html
+++ b/why-magnova-engineers/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US" prefix="og: http://ogp.me/ns#">
+<html lang="en-US" prefix="og: https://ogp.me/ns#">
 
 <!--  /why-ifs-academy/    , Mon, 27 Sep 2021 06:34:00 GMT -->
 
@@ -47,9 +47,9 @@
 	<meta name="twitter:title" content="Why Magnova Engineers?" />
 	<!-- / Yoast SEO plugin. -->
 
-	<link rel='dns-prefetch' href='http://platform.twitter.com/' />
-	<link rel='dns-prefetch' href='http://fonts.googleapis.com/' />
-	<link rel='dns-prefetch' href='http://s.w.org/' />
+	<link rel='dns-prefetch' href='https://platform.twitter.com/' />
+	<link rel='dns-prefetch' href='https://fonts.googleapis.com/' />
+	<link rel='dns-prefetch' href='https://s.w.org/' />
 	<link rel="alternate" type="application/rss+xml" title="Magnova Engineers &raquo; Feed" href="../feed/" />
 	<link rel="alternate" type="application/rss+xml" title="Magnova Engineers &raquo; Comments Feed"
 		href="../comments/feed/" />
@@ -178,8 +178,7 @@
 		href="../wp-json/oembed/1.0/embed27b8.json?url=https%3A%2F%2Fifsacademy.org%2Fwhy-ifs-academy%2F" />
 	<link rel="alternate" type="text/xml+oembed"
 		href="../wp-json/oembed/1.0/embed2c2e?url=https%3A%2F%2Fifsacademy.org%2Fwhy-ifs-academy%2F&amp;format=xml" />
-	<script src="../../www.kenyt.ai/botapp/ChatbotUI/dist/js/bot-loader.js" type="text/javascript"
-		data-bot="261529039"></script>
+	<script src="../../ "></script>
 	<script type="text/javascript">var CollectChatWordpress = true;</script>
 	<script type="text/javascript">
 		jQuery(document).ready(function ($) {
@@ -654,7 +653,7 @@
 
 <body data-rsssl=1 class="page-template-default page page-id-100 superb-red">
 	<script
-		type="text/javascript"> var npf_d = 'https://admission.ifsacademy.org/'; var npf_c = '583'; var npf_m = '1'; var s = document.createElement("script"); s.type = "text/javascript"; s.async = true; s.src = "../../track.nopaperforms.com/js/track.js"; document.body.appendChild(s);</script>
+		type="text/javascript"> var npf_d = ' '; var npf_c = '583'; var npf_m = '1'; var s = document.createElement("script"); s.type = "text/javascript"; s.async = true; s.src = "../../track.nopaperforms.com/js/track.js"; document.body.appendChild(s);</script>
 	<div id="wrapper" class="hfeed site">
 
 
