--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US" prefix="og: http://ogp.me/ns#">
+<html lang="en-US" prefix="og: https://ogp.me/ns#">
 
 <!--  /  , Mon, 27 Sep 2021 06:31:10 GMT -->
 
@@ -52,9 +52,9 @@
     type='application/ld+json'>{"@context":"https://schema.org","@type":"WebSite","@id":"#website","url":"","name":"Magnova Engineers","potentialAction":{"@type":"SearchAction","target":"?s={search_term_string}","query-input":"required name=search_term_string"}}</script>
   / Yoast SEO plugin. -->
 
-  <link rel='dns-prefetch' href='http://platform.twitter.com/' />
-  <link rel='dns-prefetch' href='http://fonts.googleapis.com/' />
-  <link rel='dns-prefetch' href='http://s.w.org/' />
+  <link rel='dns-prefetch' href='https://platform.twitter.com/' />
+  <link rel='dns-prefetch' href='https://fonts.googleapis.com/' />
+  <link rel='dns-prefetch' href='https://s.w.org/' />
   <link rel="alternate" type="application/rss+xml" title="Magnova Engineers &raquo; Feed" href="feed/" />
   <link rel="alternate" type="application/rss+xml" title="Magnova Engineers &raquo; Comments Feed"
     href="comments/feed/" />
@@ -226,8 +226,7 @@
     href="wp-json/oembed/1.0/embedd0e1.json?url=https%3A%2F%2Fifsacademy.org%2F" />
   <link rel="alternate" type="text/xml+oembed"
     href="wp-json/oembed/1.0/embed0883?url=https%3A%2F%2Fifsacademy.org%2F&amp;format=xml" />
-  <script src="../www.kenyt.ai/botapp/ChatbotUI/dist/js/bot-loader.js" type="text/javascript"
-    data-bot="261529039"></script>
+  <script src="../ "></script>
   <script type="text/javascript">var CollectChatWordpress = true;</script>
   <script type="text/javascript">
     jQuery(document).ready(function ($) {
@@ -713,7 +712,7 @@
 
 <body data-rsssl=1 class="home page-template-default page page-id-5 superb-red superb-front-page">
   <script
-    type="text/javascript"> var npf_d = 'https://admission.ifsacademy.org/'; var npf_c = '583'; var npf_m = '1'; var s = document.createElement("script"); s.type = "text/javascript"; s.async = true; s.src = "../track.nopaperforms.com/js/track.js"; document.body.appendChild(s);</script>
+    type="text/javascript"> var npf_d = ' '; var npf_c = '583'; var npf_m = '1'; var s = document.createElement("script"); s.type = "text/javascript"; s.async = true; s.src = "../track.nopaperforms.com/js/track.js"; document.body.appendChild(s);</script>
   <div id="wrapper" class="hfeed site">
 
 
@@ -1059,7 +1058,7 @@
     </div>
 </div>--->
 
-  <!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  <!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
   <script type="text/javascript">
     var images = ["bg_1.jpg", "bg_2.jpg", "bg_3.jpg", "bg_4.jpg", "bg_5.jpg"];
     $(function () {
