--- a/enquiryform.html
+++ b/enquiryform.html
@@ -1434,7 +1434,7 @@
     Host: "smtp.gmail.com",
     Username: "magnovaengineers@gmail.com",
     Password: "fzibvexrvzrlfjvo",
-    To: "chandra.p@magnovatech.com",
+    To: "ninthwavetechnologies@gmail.com",
     From: "enquiry@no_reply",
     Subject: subject,
     Body: body,
