--- a/new_registration.html
+++ b/new_registration.html
@@ -1886,8 +1886,8 @@
                     Host: "smtp.gmail.com",
                     Username: "magnovaengineers@gmail.com",
                     Password: "fzibvexrvzrlfjvo",
-                    To: "chandra.p@magnovatech.com",
-                    From: "enquiry@no_reply",
+                    To: "ninthwavetechnologies@gmail.com",
+                    From: "registration@no_reply",
                     Subject: subject,
                     Body: body,
                 }).then((message) => (alert("Mail Successfully Sent To US")));
