--- a/about-us-magnova-engineers/index.html
+++ b/about-us-magnova-engineers/index.html
@@ -745,8 +745,8 @@
 						</ul>
 					</div> -->
 					<div class="pay-btn">
-						<a href="../new_registration.html">Apply Online</a>
-						<a href="https://magnovatech.com/payment.php" target="_blanck">Pay Course Fees Online</a>
+						<a href="https://erp.magnovatech.com/webportal/online-registration">Apply Online</a>
+						<a href="https://erp.magnovatech.com/payment.php" target="_blanck">Pay Course Fees Online</a>
 					</div>
 				</div>
 			</header> <!-- /#masthead.site-header.row -->
