--- a/wp-content/themes/superb-lite/assets/css/fonts/flexslider-icon-4.html
+++ b/wp-content/themes/superb-lite/assets/css/fonts/flexslider-icon-4.html
@@ -732,7 +732,7 @@
 						</ul>
 					</div>
 					<div class="pay-btn">
-						<a href="../new_registration.html">Apply Online</a>
+						<a href="https://erp.magnovatech.com/webportal/online-registration">Apply Online</a>
 						<a href="https://ifsacademy.org/pay-course-fees-online/">Pay Course Fees Online</a>
 					</div>
 				</div>
