--- a/contact/index.html
+++ b/contact/index.html
@@ -1493,6 +1493,7 @@
 									<textarea name="Contact" id="" style="width: 99%; margin: 10px 0;" rows="5"
 										cols="10" placeholder="Start Typing here" name="message"></textarea>
 									<br>
+									<div data-netlify-recaptcha="true" ></div>
 									<button type="submit" style="background-color: #4cace4; color: white;">Submit</button>
 								</form>
 							</div>
