--- a/contact/index.html
+++ b/contact/index.html
@@ -1484,13 +1484,13 @@
 							<div id="content" style="padding: 10px; border: 1px solid #4cace4; border-radius: 8px;">
 								<h1 class="headingso">Contact Form</h1>
 
-								<form name="contact" method="POST" data-netify="true">
+								<form method="POST" data-netify="true">
 									<input style="width: 49%; margin: 10px 0; " type="text" name="name" placeholder="Full Name">
 									<input style="width: 49%; margin: 10px 0;" type="text" name="email" placeholder="Email">
 									<input style="width: 49%; margin: 10px 0;" type="tel" name="phone" placeholder="Phone Number">
 									<input style="width: 49%; margin: 10px 0;" type="tel" name="whatsapp" placeholder="Whatsapp Number">
 									<input type="text" style="width:99%; margin: 10px 0;" name="subject" placeholder="Subject">
-									<textarea name="Contact" id="" style="width: 99%; margin: 10px 0;" rows="5"
+									<textarea id="" style="width: 99%; margin: 10px 0;" rows="5"
 										cols="10" placeholder="Start Typing here" name="message"></textarea>
 									<br>
 									<div data-netlify-recaptcha="true" ></div>
