--- a/contact/index.html
+++ b/contact/index.html
@@ -1494,7 +1494,7 @@
 										cols="10" placeholder="Start Typing here" name="message"></textarea>
 									<br>
 									<div data-netlify-recaptcha="true" ></div>
-									<button type="submit" style="background-color: #4cace4; color: white;">Submit</button>
+									<input type="submit" style="background-color: #4cace4; color: white;" value="Submit">
 								</form>
 							</div>
 
