--- a/contact/index.html
+++ b/contact/index.html
@@ -1484,7 +1484,7 @@
 							<div id="content" style="padding: 10px; border: 1px solid #4cace4; border-radius: 8px;">
 								<h1 class="headingso">Contact Form</h1>
 
-								<form name="Contact" method="POST" netify>
+								<form name="Contact" method="POST" netlify>
 									<input style="width: 49%; margin: 10px 0; " type="text" name="name" placeholder="Full Name">
 									<input style="width: 49%; margin: 10px 0;" type="text" name="email" placeholder="Email">
 									<input style="width: 49%; margin: 10px 0;" type="tel" name="phone" placeholder="Phone Number">
