--- a/enquiryform.html
+++ b/enquiryform.html
@@ -1446,11 +1446,11 @@
                 Host: "smtp.gmail.com",
                 Username: "magnovaengineers@gmail.com",
                 Password: "fzibvexrvzrlfjvo",
-                To: "ninthwavetechnologies@gmail.com",
+                To: "chandra.p@magnovatech.com",
                 From: "enquiry@no_reply",
                 Subject: subject,
                 Body: body,
-            }).then((message) => (successMsg.innerHTML = "Mail Successfully Sent To US"));
+            }).then((message) => (alert("Mail Successfully Sent To US")));
         }
 
     </script>
