--- a/index.html
+++ b/index.html
@@ -2489,12 +2489,13 @@
               <aside id="text-16" class="  widget widget_text">
                 <div class="textwidget">
                   <h3 class="widget-title">Get In Touch</h3>
-                  <iframe
+                  <!-- <iframe
                     src="https://docs.google.com/forms/d/e/1FAIpQLScqwFVVMIhGHJFUk18JObdtPNWwcwzd8eVs4UNhNflMGqas9Q/viewform?embedded=true"
                     width="640" height="510" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                   <script type="text/javascript">var s = document.createElement("script");
                     s.type = "text/javascript"; s.async = true; s.src = "https://widgets.nopaperforms.com/emwgts.js";
-                    document.body.appendChild(s);</script>
+                    document.body.appendChild(s);</script> -->
+                    
                 </div>
               </aside>
             </div>
