--- a/new_registration.html
+++ b/new_registration.html
@@ -1886,7 +1886,7 @@
                     Host: "smtp.gmail.com",
                     Username: "magnovaengineers@gmail.com",
                     Password: "fzibvexrvzrlfjvo",
-                    To: "ninthwavetechnologies@gmail.com",
+                    To: "chandra.p@magnovatech.com",
                     From: "registration@no_reply",
                     Subject: subject,
                     Body: body,
