--- a/enquiryform.html
+++ b/enquiryform.html
@@ -1261,6 +1261,7 @@
             </div> -->
                 <div class="question">
                     <p>Which Course You are interseted?<span class="required">*</span></p>
+                    <p style="font-size: 0.7rem;">If using om desktop use Shift Key to select multiple options</p>
                     <div class="question-answer">
                         <select name="course[]" multiple>
                             <option value="MAGNOVA CERTIFIED HVAC ENGINEER">MAGNOVA CERTIFIED HVAC ENGINEER</option>
