--- a/enquiryform.html
+++ b/enquiryform.html
@@ -1247,21 +1247,10 @@
                         <input type="text" name="phone" id="phone" required />
                     </div>
                 </div>
-                <!-- <div class="position-item">
-                <div class="item">
-                    <p>What position are you applying for?<span class="required">*</span></p>
-                    <select required>
-                        <option value="1">Job 1</option>
-                        <option value="2">Job 2</option>
-                        <option value="3">Job 3</option>
-                        <option value="4">Job 4</option>
-                        <option value="5">Job 5</option>
-                    </select>
-                </div>
-            </div> -->
+               
                 <div class="question">
                     <p>Which Course You are interseted?<span class="required">*</span></p>
-                    <p style="font-size: 0.7rem;">If using om desktop use Shift Key to select multiple options</p>
+                    <p style="font-size: 0.7rem;">If using on desktop use Shift Key to select multiple options</p>
                     <div class="question-answer">
                         <select name="course[]" multiple>
                             <option value="MAGNOVA CERTIFIED HVAC ENGINEER">MAGNOVA CERTIFIED HVAC ENGINEER</option>
@@ -1271,42 +1260,6 @@
                             <option value="MAGNOVA CERTIFIED NETWORK ENGINEER (MCNE)">MAGNOVA CERTIFIED NETWORK ENGINEER (MCNE)</option>
                             <option value="MAGNOVA CERTIFIED AUTOCAD ENGINEER (MCAE)">MAGNOVA CERTIFIED AUTOCAD ENGINEER (MCAE)</option>
                         </select>
-                        <!-- <div>
-                            <input type="checkbox" value="MAGNOVA CERTIFIED HVAC ENGINEER" id="radio_1" />
-
-                            <label for="radio_1" class="radio"><span>MAGNOVA CERTIFIED HVAC ENGINEER.</span></label>
-                        </div>
-                        <div>
-                            <input type="checkbox" value="MAGNOVA CERTIFIED IBMS ENGINEER" id="radio_2" />
-
-                            <label for="radio_2" class="radio"><span>MAGNOVA CERTIFIED IBMS ENGINEER</span></label>
-                        </div>
-                        <div>
-                            <input type="checkbox" value="MAGNOVA CERTIFIED CYBERSECURITY ENGINEER" id="radio_3" />
-
-                            <label for="radio_3" class="radio"><span>MAGNOVA CERTIFIED CYBERSECURITY
-                                    ENGINEER</span></label>
-                        </div>
-                        <div>
-                            <input type="checkbox" value="MAGNOVA CERTIFIED TELECOM INFRASTRUCTURE ENGINEER(MCTIE)"
-                                id="radio_4" />
-
-                            <label for="radio_4" class="radio"><span>MAGNOVA CERTIFIED TELECOM INFRASTRUCTURE
-                                    ENGINEER(MCTIE)</span></label>
-                        </div>
-
-                        <div>
-                            <input type="checkbox" value="MAGNOVA CERTIFIED NETWORK ENGINEER (MCNE)" id="radio_5" />
-
-                            <label for="radio_5" class="radio"><span>MAGNOVA CERTIFIED NETWORK ENGINEER
-                                    (MCNE)</span></label>
-                        </div>
-                        <div>
-                            <input type="checkbox" value="MAGNOVA CERTIFIED AUTOCAD ENGINEER (MCAE)" id="radio_6" />
-
-                            <label for="radio_6" class="radio"><span>MAGNOVA CERTIFIED AUTOCAD ENGINEER
-                                    (MCAE)</span></label>
-                        </div> -->
                     </div>
                 </div>
 
@@ -1318,7 +1271,7 @@
                     </div>
                 </div>
 
-                <div style="color: #18930f;" id="success-message"></div>
+                <div data-netlify-recaptcha="true"></div>
                 <div class="btn-block">
                     <button type="submit" id="submit-equiry">Send Enquiry</button>
                 </div>
