--- a/POST.html
+++ b/POST.html
@@ -707,7 +707,7 @@
 						</ul>
 					</div>
 					<div class="pay-btn">
-						<a href="https://erp.magnovatech.com/webportal/online-registration">Apply Online</a>
+						<a href="https://erp.magnovatech.com/online-registration">Apply Online</a>
 						<a href="https://magnovatech.com/pay-course-fees-online/">Pay Course Fees Online</a>
 					</div>
 				</div>
