--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     dataLayer.push(dataLayer_content);//]]>
   </script>
 
-  
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-N782VXWV8C"></script>
   <script>
@@ -720,9 +720,9 @@
         </div><!-- /.header-extras -->
 
         <div class="">
-          
+
           <div class="pay-btn">
-            <a href="https://erp.magnovatech.com/webportal/online-registration" target="_blanck">Apply Online</a>
+            <a href="https://erp.magnovatech.com/online-registration" target="_blanck">Apply Online</a>
             <a href="https://erp.magnovatech.com/payment.php" target="_blanck">Pay Course Fees Online</a>
           </div>
         </div>
@@ -891,9 +891,9 @@
     s.type = "text/javascript"; s.async = true;
     document.body.appendChild(s);</script>
 
-  
 
-  
+
+
 
 
   <div class="home-banner">
@@ -1462,7 +1462,7 @@
             <div class="csslayout-container__separator"></div>
           </div>
 
-          
+
 
 
           <div class="content">
