--- a/careers/index.html
+++ b/careers/index.html
@@ -693,7 +693,7 @@
 				<div class="">
 
 					<div class="pay-btn">
-						<a href="https://erp.magnovatech.com/webportal/online-registration">Apply Online</a>
+						<a href="https://erp.magnovatech.com/online-registration">Apply Online</a>
 						<a href="https://erp.magnovatech.com/payment.php" target="_blanck">Pay Course Fees Online</a>
 					</div>
 				</div>
