--- a/enquiryform.html
+++ b/enquiryform.html
@@ -768,7 +768,7 @@
             </ul>
           </div> -->
                     <div class="pay-btn">
-                        <a href="https://erp.magnovatech.com/webportal/online-registration">Apply Online</a>
+                        <a href="https://erp.magnovatech.com/online-registration">Apply Online</a>
                         <a href="https://erp.magnovatech.com/payment.php" target="_blanck">Pay Course Fees Online</a>
                     </div>
                 </div>
@@ -1270,7 +1270,7 @@
                     <button type="submit" id="submit-equiry">Send Enquiry</button>
                 </div>
             </form>
-            
+
         </div>
 
         <div id="maincontentcontainer">
