--- a/why-magnova-engineers/index.html
+++ b/why-magnova-engineers/index.html
@@ -726,7 +726,7 @@
 						</ul>
 					</div> -->
 					<div class="pay-btn">
-						<a href="https://erp.magnovatech.com/webportal/online-registration">Apply Online</a>
+						<a href="https://erp.magnovatech.com/online-registration">Apply Online</a>
 						<a href="https://erp.magnovatech.com/payment.php" target="_blanck">Pay Course Fees Online</a>
 					</div>
 				</div>
