--- a/hvac-ibms-cyber_security-fresh-engineers-for-placement/index.html
+++ b/hvac-ibms-cyber_security-fresh-engineers-for-placement/index.html
@@ -1206,14 +1206,48 @@
 				<div class="widget-area" role="complementary">
 					<aside id="text-16" class="  widget widget_text">
 						<div class="textwidget">
-							<h3 class="widget-title">Get In Touch</h3>
-							<iframe
-								src="https://docs.google.com/forms/d/e/1FAIpQLScqwFVVMIhGHJFUk18JObdtPNWwcwzd8eVs4UNhNflMGqas9Q/viewform?embedded=true"
-								width="640" height="510" frameborder="0" marginheight="0"
-								marginwidth="0">Loading…</iframe>
-							<script type="text/javascript">var s = document.createElement("script");
-								s.type = "text/javascript"; s.async = true; s.src = "https://widgets.nopaperforms.com/emwgts.js";
-								document.body.appendChild(s);</script>
+							<h3 class="widget-title">Quick Links</h3>
+							<ul>
+								<li><a href="https://www.magnovatech.com">Home</a></li>
+								<li><a href="../about-us-magnova-engineers">About-Us</a></li>
+								<li> <strong style="color: white;">Our Courses :-</strong>
+									<ol>
+										<li><a href="../MAGNOVA_CERTIFIED_HVAC_ENGINEER/" target="_blank">MAGNOVA
+												CERTIFIED HVAC
+												ENGINEER.</a></li>
+
+										<li><a href="../MAGNOVA_CERTIFIED_IBMS_ENGINEER/" target="_blank">MAGNOVA
+												CERTIFIED IBMS
+												ENGINEER.</a></li>
+
+
+										<li><a href="../Magnova_Certified_Cybersecurity_Engineer/"
+												target="_blank">MAGNOVA
+												CERTIFIED CYBERSECURITY ENGINEER</a>
+										</li>
+
+										<li><a href="../MAGNOVA_CERTIFIED_TELECOM_INFRASTRUCTURE_ENGINEER/"
+												target="_blank">MAGNOVA CERTIFIED TELECOM
+												INFRASTRUCTURE ENGINEER (MCTIE)</a>
+										</li>
+
+										<li><a href="../MAGNOVA_CERTIFIED_NETWORK_ENGINEER/" target="_blank">MAGNOVA
+												CERTIFIED
+												NETWORK ENGINEER (MCNE)</a>
+										</li>
+
+										<li><a href="../MAGNOVA_CERTIFIED_AUTOCAD_ENGINEER/" target="_blank">MAGNOVA
+												CERTIFIED
+												AUTOCAD ENGINEER (MCAE)</a>
+										</li>
+									</ol>
+								</li>
+								<li><a href="../placement-list/">Placement</a></li>
+								<li><a href="https://erp.magnovatech.com/online-registration">Apply Online</a></li>
+								<li><a href="https://erp.magnovatech.com/payment.php">Payment</a></li>
+								<li><a href="../privacy-policy">Privacy Policy</a></li>
+								<li><a href="../contact/">Contact Us</a></li>
+							</ul>
 						</div>
 					</aside>
 				</div>
